2009-06-04  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (set_console_title): Convert title string to
	wchar_t and call SetConsoleTitleW.

2009-06-04  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (fhandler_console::read): Allow Ctrl-Space to
	emit a NUL byte.

2009-06-04  Dave Korn  <dave.korn.cygwin@gmail.com>

	* thread.cc (__cygwin_lock_lock):  Delete racy optimisation.
	(__cygwin_lock_unlock):  Likewise.

2009-06-03  IWAMURO Motnori  <deenheart@gmail.com>

	* strfuncs.cc (sys_cp_mbstowcs): Fix condition.

2009-06-03  Corinna Vinschen  <corinna@vinschen.de>

	* strfuncs.cc (sys_cp_wcstombs): Implement reverse functionality
	of the change to sys_cp_mbstowcs from 2009-05-30.
	(sys_cp_mbstowcs): Slightly reformat.  Fix comment to accommodate
	change to sys_cp_wcstombs.  Don't write to *ptr if dst is NULL.

2009-06-03  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (fhandler_console::read): Convert Alt-Backspace
	to \033\177 or to \377 dependent on the setting of dev_state->metabit.

2009-06-02  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (path_conv::check): Don't call set_exec for files on "noacl"
	mount points.

2009-05-30  Christopher Faylor  <me+cygwin@cgf.cx>

	* strfuncs.cc (sys_cp_mbstowcs): Treat src as unsigned char *.  Convert
	failure of f_mbtowc into a single malformed utf-16 value.

2009-05-30  Christopher Faylor  <me+cygwin@cgf.cx>

	* cygwin/include/sys/termios.h: Make default erase character "^?".

2009-05-30  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_console.cc (fhandler_console::read): Convert backspace key
	to DEL.

2009-05-29  Christopher Faylor  <me+cygwin@cgf.cx>

	* path.cc (cwdstuff::set): Rewrite previous change to properly test the
	end of the buffer.

2009-05-28  Christopher Faylor  <me+cygwin@cgf.cx>

	* path.cc (cwdstuff::set): Avoid removing a nonexistent trailing slash.

2009-05-20  Eric Blake  <ebb9@byu.net>

	* net.cc (gethostby_helper): Use correct signedness.
